cluster/apps/mediaserver/plex/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: plex
  namespace: mediaserver
spec:
  hosts:
    - plex.${INTERNAL_DOMAIN}
  gateways:
    - istio-ingress/cluster-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 32400
            host: plex.mediaserver.svc.cluster.local
